added a done button

--- a/quiz-app/src/app/app.component.html
+++ b/quiz-app/src/app/app.component.html
@@ -2,10 +2,11 @@
     <p>{{title}}</p>
     
     <span class="example-spacer"></span>
+    <p>Shuffle</p>
     <md-slide-toggle 
         class="example-margin"
         [(ngModel)]="shouldShuffle">
-            Shuffle {{shouldShuffle}}
+            
     </md-slide-toggle>
 </md-toolbar>
     
