added automatic moving to next question via event emitter

--- a/quiz-app/src/app/quiz-main/quiz-main.component.html
+++ b/quiz-app/src/app/quiz-main/quiz-main.component.html
@@ -8,7 +8,7 @@
         </md-card-title>
         <md-card-content>
             
-            <question-detail [question]="selectedQuestion" *ngIf="!isComplete"></question-detail>
+            <question-detail [question]="selectedQuestion" (onAnswered)="submit(selectedQuestion)" *ngIf="!isComplete"></question-detail>
 
         </md-card-content>
         <md-card-actions>
