Angular app rebuilt and working

--- a/quiz-app-angular/src/app/lsaquiz/lsaquiz.component.html
+++ b/quiz-app-angular/src/app/lsaquiz/lsaquiz.component.html
@@ -1,1 +1,4 @@
-<quiz-main [selectedQuiz]="selectedQuiz" *ngIf="selectedQuiz"></quiz-main>
+<app-quiz-main
+  [selectedQuiz]="selectedQuiz"
+  *ngIf="selectedQuiz"
+></app-quiz-main>
