--- a/quiz-app-angular/src/app/app.component.css
+++ b/quiz-app-angular/src/app/app.component.css
@@ -1,10 +1,11 @@
-.example-icon {
-  padding: 0 14px;
-}
-
-.example-spacer {
+.fill-remaining-space {
+  /* This fills the remaining space, by using flexbox.
+       Every toolbar row uses a flexbox row layout. */
   flex: 1 1 auto;
 }
 
-.toolbardemoBasicUsage md-toolbar md-icon.md-default-theme {
-  color: white; }
+.example-fill-remaining-space {
+  /* This fills the remaining space, by using flexbox.
+       Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
