--- a/quiz-app-angular/src/app/app.component.html
+++ b/quiz-app-angular/src/app/app.component.html
@@ -1,19 +1,16 @@
-<md-toolbar layout="row" color="primary">
-    <p>{{title}}</p>
-    
-    <span class="example-spacer"></span>
-    <md-slider min="1" max="100" step="1" value="2"></md-slider>
+<mat-toolbar layout="row" color="dark-warn">
+  <nav>
+    <a mat-raised-button color="primary" routerLink="/LSAQuiz">LSA</a>
+    <!--<a mat-raised-button color="primary" routerLink="/CSSAQuiz">CSSA</a>-->
+    <a mat-raised-button color="primary" routerLink="/CSAQuiz">CSA</a>
+  </nav>
+  <span> </span>
 
-    <p>Shuffle</p>
-    <md-slide-toggle class="example-margin" [(ngModel)]="shouldShuffle"></md-slide-toggle>
+  <!-- This fills the remaining space of the current row -->
+  <span class="example-fill-remaining-space"></span>
 
-</md-toolbar>
-    
-<md-toolbar layout="row" color="dark-warn">
-    <nav>
-        <a md-raised-button color="primary" routerLink="/Search">Search</a>
-        <a md-raised-button color="primary" routerLink="/LSAQuiz">LSA</a>
-        <a md-raised-button color="primary" routerLink="/CSSAQuiz">CSSA</a>
-    </nav>
-</md-toolbar>
+  <!-- <span>Shuffle
+    <mat-slide-toggle class="example-margin" (click)="setShuffling()" [checked]="shouldShuffle"></mat-slide-toggle>
+  </span> -->
+</mat-toolbar>
 <router-outlet></router-outlet>
